force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_Audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Audit__c</fullName>
    <inlineHelpText>Date of Audit should be either Today or Past date. It can not be a future date.</inlineHelpText>
    <label>Date of Audit</label>
    <type>Date</type>
</CustomField>