force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_Audit_From__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Audit_From__c</fullName>
    <label>Date of Audit From</label>
    <type>Date</type>
</CustomField>