force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_Audit_To__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Audit_To__c</fullName>
    <label>Date of Audit To</label>
    <type>Date</type>
</CustomField>