force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_Decision__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Decision__c</fullName>
    <inlineHelpText>Date of Decision should be either Today or a Past date. It can not be a future date.</inlineHelpText>
    <label>Date of Decision</label>
    <type>Date</type>
</CustomField>