force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_first_Bonsucro_certification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_Bonsucro_certification__c</fullName>
    <label>Date of first Bonsucro certification</label>
    <type>Date</type>
</CustomField>