force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_Issuing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issuing__c</fullName>
    <label>Date of Issuing</label>
    <type>Date</type>
</CustomField>