force-app/main/default/objects/Opportunity_Certificate__c/fields/Date_of_Next_Recertification_Audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Recertification_Audit__c</fullName>
    <description>Please make sure that the Date of Next Recertification Audit is a future date. It can not be a past date.</description>
    <inlineHelpText>Date of Next Recertification Audit is a future date. It can not be a past date.</inlineHelpText>
    <label>Date of Next Recertification Audit</label>
    <type>Date</type>
</CustomField>