force-app/main/default/objects/Opportunity_Certificate__c/fields/End_date_of_current_certificate__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_current_certificate__c</fullName>
    <label>End date of current certificate</label>
    <type>Date</type>
</CustomField>