force-app/main/default/objects/Opportunity_Certificate__c/fields/Estates_FFB_Projected_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Estates_FFB_Projected_Tonnage__c</fullName>
    <label>Estates FFB Projected Tonnage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>