force-app/main/default/objects/Opportunity_Certificate__c/fields/External_Certificate_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Certificate_Id__c</fullName>
    <formula>Certificate__r.External_Record_Id__c</formula>
    <label>External Certificate Id</label>
    <type>Text</type>
</CustomField>