force-app/main/default/objects/Opportunity_Certificate__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>