force-app/main/default/objects/Opportunity_Certificate__c/fields/Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID__c</fullName>
    <label>Facility ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>