force-app/main/default/objects/Opportunity_Certificate__c/fields/Facility_name_and_address__c.field-meta.xml
<CustomField>
    <fullName>Facility_name_and_address__c</fullName>
    <label>Facility name and address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>