force-app/main/default/objects/Opportunity_Certificate__c/fields/Farm_Unit__c.field-meta.xml
<CustomField>
    <fullName>Farm_Unit__c</fullName>
    <label>Farm Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>