force-app/main/default/objects/Opportunity_Certificate__c/fields/FFB_Formula__c.field-meta.xml
<CustomField>
    <fullName>FFB_Formula__c</fullName>
    <formula>IF(
    AND(
        OR(
            INCLUDES(Phase_of_Group__c, &quot;Eligibility&quot;),
            INCLUDES(Phase_of_Group__c, &quot;MS A&quot;)
        ),
        INCLUDES(Phase_of_Group__c, &quot;MS B&quot;)
    ),
    &quot;IS-FFB, IS-CSPO, IS-CSPKO, IS-CSPK, FFB (ISH)&quot;,
    IF(
        OR(
            INCLUDES(Phase_of_Group__c, &quot;Eligibility&quot;),
            INCLUDES(Phase_of_Group__c, &quot;MS A&quot;)
        ),
        &quot;IS-FFB, IS-CSPO, IS-CSPKO, IS-CSPK&quot;,
        IF(
            INCLUDES(Phase_of_Group__c, &quot;MS B&quot;),
            &quot;FFB (ISH)&quot;,
            &quot;&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFB Formula</label>
    <type>Text</type>
</CustomField>