force-app/main/default/objects/Opportunity_Certificate__c/fields/FFB_Projected_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>FFB_Projected_Tonnage__c</fullName>
    <label>FFB Projected Tonnage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>