force-app/main/default/objects/Opportunity_Certificate__c/fields/FFB_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>FFB_Tonnage__c</fullName>
    <label>FFB Tonnage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheme</fullName>
            </value>
            <value>
                <fullName>Outgrowers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>