force-app/main/default/objects/Opportunity_Certificate__c/fields/FFB_Tonnage_Certificate__c.field-meta.xml
<CustomField>
    <fullName>FFB_Tonnage_Certificate__c</fullName>
    <formula>IF(  ISPICKVAL( Scheme_Outgrowers__c , &apos;Scheme&apos; )  , &apos;Scheme Smallholders&apos; , &apos;Outgrowers FFB Tonnage&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFB Tonnage Certificate</label>
    <type>Text</type>
</CustomField>