force-app/main/default/objects/Opportunity_Certificate__c/fields/FFBTonnage__c.field-meta.xml
<CustomField>
    <fullName>FFBTonnage__c</fullName>
    <label>FFB Tonnage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>