force-app/main/default/objects/Opportunity_Certificate__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>