force-app/main/default/objects/Opportunity_Certificate__c/fields/For_the_scope_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>For_the_scope_of_Activities__c</fullName>
    <label>For the scope of Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>