force-app/main/default/objects/Opportunity_Certificate__c/fields/FPT__c.field-meta.xml
<CustomField>
    <fullName>FPT__c</fullName>
    <description>FSC</description>
    <label>FPT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>