force-app/main/default/objects/Opportunity_Certificate__c/fields/FPT_Calculated__c.field-meta.xml
<CustomField>
    <fullName>FPT_Calculated__c</fullName>
    <description>Use in Trader_AAF_Class, Processor_AAF_Class field</description>
    <formula>IF(ISNULL(Total_Revenue__c ),FPT__c,Total_Revenue__c)</formula>
    <label>FPT Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>