force-app/main/default/objects/Opportunity_Certificate__c/fields/FPT_Processor_Calculated__c.field-meta.xml
<CustomField>
    <fullName>FPT_Processor_Calculated__c</fullName>
    <description>FSC</description>
    <formula>IF( ISNULL(FPT_Processor__c),Revenue_Processor__c,FPT_Processor__c)</formula>
    <label>FPT Processor  Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>