force-app/main/default/objects/Opportunity_Certificate__c/fields/FPT_Trader__c.field-meta.xml
<CustomField>
    <fullName>FPT_Trader__c</fullName>
    <description>FSC</description>
    <label>FPT Trader</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>