force-app/main/default/objects/Opportunity_Certificate__c/fields/FPT_Trader_Calculated__c.field-meta.xml
<CustomField>
    <fullName>FPT_Trader_Calculated__c</fullName>
    <description>FSC</description>
    <formula>IF( ISNULL(FPT_Trader__c),Revenue_Trader__c,FPT_Trader__c)</formula>
    <label>FPT Trader Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>