force-app/main/default/objects/Opportunity_Certificate__c/fields/FSC__c.field-meta.xml
<CustomField>
    <fullName>FSC__c</fullName>
    <label>FSC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>