force-app/main/default/objects/Opportunity_Certificate__c/fields/FSC_Controlled_Wood_Sources__c.field-meta.xml
<CustomField>
    <fullName>FSC_Controlled_Wood_Sources__c</fullName>
    <description>FSC</description>
    <label>FSC Controlled Wood Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>