force-app/main/default/objects/Opportunity_Certificate__c/fields/FSC_Json_Request__c.field-meta.xml
<CustomField>
    <fullName>FSC_Json_Request__c</fullName>
    <description>FSC</description>
    <label>FSC Json Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>