force-app/main/default/objects/Opportunity_Certificate__c/fields/FSC_Response__c.field-meta.xml
<CustomField>
    <fullName>FSC_Response__c</fullName>
    <description>FSC</description>
    <label>FSC Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>