force-app/main/default/objects/Opportunity_Certificate__c/fields/FSC_Status__c.field-meta.xml
<CustomField>
    <fullName>FSC_Status__c</fullName>
    <description>FSC</description>
    <formula>CASE( Certificate_Status__c ,&apos;Certified&apos;,&apos;1&apos;,&apos;Pending&apos;,&apos;3&apos;,&apos;Suspended&apos;,&apos;4&apos;,&apos;Terminated&apos;,&apos;5&apos;,&apos;Withdrawn&apos;,&apos;6&apos;,&apos;Expired&apos;,&apos;7&apos;,&apos;Applicant&apos;,&apos;10&apos;,&apos;Draft&apos;,&apos;11&apos;,&apos;Suspended and blocked&apos;,&apos;12&apos;,&apos;Terminated and blocked&apos;,&apos;13&apos;,&apos;0&apos;)</formula>
    <label>FSC Status</label>
    <type>Text</type>
</CustomField>