force-app/main/default/objects/Opportunity_Certificate__c/fields/GGN__c.field-meta.xml
<CustomField>
    <fullName>GGN__c</fullName>
    <label>GGN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>