force-app/main/default/objects/Opportunity_Certificate__c/fields/GLOBAL_STANDARD_START__c.field-meta.xml
<CustomField>
    <fullName>GLOBAL_STANDARD_START__c</fullName>
    <label>GLOBAL STANDARD START</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>