force-app/main/default/objects/Opportunity_Certificate__c/fields/GPS_Location__c.field-meta.xml
<CustomField>
    <fullName>GPS_Location__c</fullName>
    <label>GPS Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>