force-app/main/default/objects/Opportunity_Certificate__c/fields/Group_Entity__c.field-meta.xml
<CustomField>
    <fullName>Group_Entity__c</fullName>
    <label>Group Entity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>