force-app/main/default/objects/Opportunity_Certificate__c/fields/Group_Member_or_Additional_SItes__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_or_Additional_SItes__c</fullName>
    <label>Group Members or Additional SItes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Members</fullName>
                <default>true</default>
                <label>Group Members</label>
            </value>
            <value>
                <fullName>Addtional Sites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>