force-app/main/default/objects/Opportunity_Certificate__c/fields/Group_members__c.field-meta.xml
<CustomField>
    <fullName>Group_members__c</fullName>
    <label>Group members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>