force-app/main/default/objects/Opportunity_Certificate__c/fields/Harvest_Included__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Included__c</fullName>
    <label>Harvest Included</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>