force-app/main/default/objects/Opportunity_Certificate__c/fields/Harvest_Method_Observed__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Method_Observed__c</fullName>
    <label>Harvest Method Observed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>