force-app/main/default/objects/Opportunity_Certificate__c/fields/Has_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Has_Achieved__c</fullName>
    <label>Has Achieved</label>
    <length>30</length>
    <type>Text</type>
</CustomField>