force-app/main/default/objects/Opportunity_Certificate__c/fields/Independent_Palm_Oil_Mill__c.field-meta.xml
<CustomField>
    <fullName>Independent_Palm_Oil_Mill__c</fullName>
    <label>Independent Palm Oil Mill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>