force-app/main/default/objects/Opportunity_Certificate__c/fields/Insurance_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Date__c</fullName>
    <label>Original Insurance Date</label>
    <type>Date</type>
</CustomField>