force-app/main/default/objects/Opportunity_Certificate__c/fields/Is_SYNC_With_FSC__c.field-meta.xml
<CustomField>
    <fullName>Is_SYNC_With_FSC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FSC</description>
    <label>Is SYNC With FSC ?</label>
    <type>Checkbox</type>
</CustomField>