force-app/main/default/objects/Opportunity_Certificate__c/fields/ISCC_Audit_Address__c.field-meta.xml
<CustomField>
    <fullName>ISCC_Audit_Address__c</fullName>
    <label>Place of audit</label>
    <type>TextArea</type>
</CustomField>