force-app/main/default/objects/Opportunity_Certificate__c/fields/Issued_by__c.field-meta.xml
<CustomField>
    <fullName>Issued_by__c</fullName>
    <label>Issued by</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>