force-app/main/default/objects/Opportunity_Certificate__c/fields/laboratory_grown_or_mined__c.field-meta.xml
<CustomField>
    <fullName>laboratory_grown_or_mined__c</fullName>
    <label>laboratory grown or mined</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>laboratory grown</fullName>
            </value>
            <value>
                <fullName>mined</fullName>
            </value>
            <value>
                <fullName>natural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>