force-app/main/default/objects/Opportunity_Certificate__c/fields/Landfilled__c.field-meta.xml
<CustomField>
    <fullName>Landfilled__c</fullName>
    <label>Landfilled %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>