force-app/main/default/objects/Opportunity_Certificate__c/fields/Lock_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Lock_Certificate__c</fullName>
    <label>Lock Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lock</fullName>
            </value>
            <value>
                <fullName>Unlock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>