force-app/main/default/objects/Opportunity_Certificate__c/fields/Mill_Address__c.field-meta.xml
<CustomField>
    <fullName>Mill_Address__c</fullName>
    <label>Mill Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>