force-app/main/default/objects/Opportunity_Certificate__c/fields/MSC_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>MSC_Certificate_Number__c</fullName>
    <formula>IF(
ISPICKVAL(Certificate__r.Refer_SCS_Scheme_Number__c , &apos;SCS Certification Number&apos;),TEXT(Certificate__r.Program__r.ProgramCertificationSequence__c),
IF(ISPICKVAL(Certificate__r.Refer_SCS_Scheme_Number__c , &apos;Scheme Certification Number&apos;),
Certificate__r.Scheme_Certification_Number__c,&apos;Missing Certificate Number&apos;))</formula>
    <label>MSC Certificate Number</label>
    <type>Text</type>
</CustomField>