force-app/main/default/objects/Opportunity_Certificate__c/fields/Multi_site_Central_Office__c.field-meta.xml
<CustomField>
    <fullName>Multi_site_Central_Office__c</fullName>
    <label>Multi-site Central Office</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>