force-app/main/default/objects/Opportunity_Certificate__c/fields/National_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>National_Interpretation__c</fullName>
    <label>National Interpretation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nigeria, 2021</fullName>
            </value>
            <value>
                <fullName>Guatemala National Interpretation, 2021</fullName>
            </value>
            <value>
                <fullName>Honduras National Interpretation, 2021</fullName>
            </value>
            <value>
                <fullName>Cameroon National Interpretation, 2021</fullName>
            </value>
            <value>
                <fullName>Colombia National Interpretation, 2019</fullName>
            </value>
            <value>
                <fullName>Cote d&apos;Ivoire National Interpreation, 2020</fullName>
            </value>
            <value>
                <fullName>Gabon National Interpretation, 2019</fullName>
            </value>
            <value>
                <fullName>Ghana National Interpretation, 2019</fullName>
            </value>
            <value>
                <fullName>India National Interpreation, 2019</fullName>
            </value>
            <value>
                <fullName>Indonesia National Interpretation, 2019</fullName>
            </value>
            <value>
                <fullName>Malaysia National Interpretation, 2019</fullName>
            </value>
            <value>
                <fullName>Mexico National Interpreatation, 2019</fullName>
            </value>
            <value>
                <fullName>Papua New Guinea and Salomon Islands, 2019</fullName>
            </value>
            <value>
                <fullName>Sierra Leone National Interpreation , 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>