force-app/main/default/objects/Opportunity_Certificate__c/fields/No_Sale_with_FSC_claims_Since_Last_Audit__c.field-meta.xml
<CustomField>
    <fullName>No_Sale_with_FSC_claims_Since_Last_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FSC</description>
    <label>No Sale with FSC claims Since Last Audit</label>
    <type>Checkbox</type>
</CustomField>