force-app/main/default/objects/Opportunity_Certificate__c/fields/Number_of_Farms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Farms__c</fullName>
    <label>Number of Farms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>