force-app/main/default/objects/Opportunity_Certificate__c/fields/Number_of_Producers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Producers__c</fullName>
    <label>Number of Producers / Prod Sites</label>
    <length>30</length>
    <type>Text</type>
</CustomField>