force-app/main/default/objects/Opportunity_Certificate__c/fields/Observed_during_audit__c.field-meta.xml
<CustomField>
    <fullName>Observed_during_audit__c</fullName>
    <label>Observed during audit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>