force-app/main/default/objects/Opportunity_Certificate__c/fields/Operation_Scope__c.field-meta.xml
<CustomField>
    <fullName>Operation_Scope__c</fullName>
    <label>Operation Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>