force-app/main/default/objects/Opportunity_Certificate__c/fields/Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>Operator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operator Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Certificates (Operator Name)</relationshipLabel>
    <relationshipName>Opportunity_Certificates4</relationshipName>
    <type>Lookup</type>
</CustomField>