force-app/main/default/objects/Opportunity_Certificate__c/fields/Option_1__c.field-meta.xml
<CustomField>
    <fullName>Option_1__c</fullName>
    <label>Option 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Site</fullName>
            </value>
            <value>
                <fullName>Multisite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>