force-app/main/default/objects/Opportunity_Certificate__c/fields/Other_sites_certified__c.field-meta.xml
<CustomField>
    <fullName>Other_sites_certified__c</fullName>
    <label>Other sites certified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>