force-app/main/default/objects/Opportunity_Certificate__c/fields/Outgrowers_ISH_FFB_Projected_Tonnage_mo__c.field-meta.xml
<CustomField>
    <fullName>Outgrowers_ISH_FFB_Projected_Tonnage_mo__c</fullName>
    <label>Outgrowers/ISH FFB Projected Tonnage (mo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>