force-app/main/default/objects/Opportunity_Certificate__c/fields/OutSourcing__c.field-meta.xml
<CustomField>
    <fullName>OutSourcing__c</fullName>
    <description>FSC</description>
    <label>OutSourcing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>