force-app/main/default/objects/Opportunity_Certificate__c/fields/Parallel_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Parallel_Ownership__c</fullName>
    <label>Parallel Ownership</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>