force-app/main/default/objects/Opportunity_Certificate__c/fields/Parallel_Production__c.field-meta.xml
<CustomField>
    <fullName>Parallel_Production__c</fullName>
    <label>Parallel Production</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>