force-app/main/default/objects/Opportunity_Certificate__c/fields/Parent_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Membership_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Membership Number</label>
    <referenceTo>Program_Membership__c</referenceTo>
    <relationshipLabel>Opportunity Certificates (Parent Membership Number)</relationshipLabel>
    <relationshipName>Opportunity_Certificates1</relationshipName>
    <type>Lookup</type>
</CustomField>