force-app/main/default/objects/Opportunity_Certificate__c/fields/PEFC_Cont_Sources__c.field-meta.xml
<CustomField>
    <fullName>PEFC_Cont_Sources__c</fullName>
    <description>FSC</description>
    <label>PEFC Cont Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>