force-app/main/default/objects/Opportunity_Certificate__c/fields/PHA_Certifisate__c.field-meta.xml
<CustomField>
    <fullName>PHA_Certifisate__c</fullName>
    <label>PHA Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enclosed</fullName>
            </value>
            <value>
                <fullName>Open Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>