force-app/main/default/objects/Opportunity_Certificate__c/fields/PHA_N__c.field-meta.xml
<CustomField>
    <fullName>PHA_N__c</fullName>
    <label>PHA-N</label>
    <type>TextArea</type>
</CustomField>