force-app/main/default/objects/Opportunity_Certificate__c/fields/Phase_of_Group__c.field-meta.xml
<CustomField>
    <fullName>Phase_of_Group__c</fullName>
    <label>Phase of Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility</fullName>
            </value>
            <value>
                <fullName>MS A</fullName>
            </value>
            <value>
                <fullName>MS B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>