force-app/main/default/objects/Opportunity_Certificate__c/fields/Plantations_NF_Acres__c.field-meta.xml
<CustomField>
    <fullName>Plantations_NF_Acres__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FSC</description>
    <label>Plantations-NF (Acres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>