force-app/main/default/objects/Opportunity_Certificate__c/fields/Plantations_NF_In_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Plantations_NF_In_Hectares__c</fullName>
    <description>FSC</description>
    <formula>Plantations_NF_Acres__c  /  $CustomMetadata.FSC_Area_Configuration__mdt.Acer.Acre__c</formula>
    <label>Plantations-NF (In Hectares)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>